# neuropt

./: .gitignore  404.html  CONTRIBUTING.md  Dockerfile.benchmark  LICENSE  README.md  benchmark_results.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
api/: index.html
benchmarks/: index.html
cli/: index.html
docs/: api.md  benchmarks.md  cli.md  examples.md  fine-tuning.md  how-it-works.md  index.md  introspection.md  quickstart.md
examples/: benchmark.py  benchmark_llm_pso.ipynb  benchmark_memory.py  benchmark_pso_vs_bayes_vs_grid.ipynb  benchmark_simple.py  benchmark_suite.py  benchmark_utils.py  benchmark_xgboost.py  benchmark_xgboost_covertype.py  fashion_mnist.py  index.html  llm_arch_search.py  llm_pso_fashion.py  neuropt_demo.ipynb  train_fashion.py  train_resnet.py
fine-tuning/: index.html
how-it-works/: index.html
introspection/: index.html
llm_pso/: __init__.py  advisor.py  experiment.py  log_store.py  runner.py
llm_pso/backends/: __init__.py  base.py  claude_backend.py  local_qwen.py  openai_backend.py
neuropt/: __init__.py  arch_search.py  cli.py  introspect.py  search_space.py
neuropt/backends/: __init__.py  base.py  claude_backend.py  local_qwen.py  openai_backend.py
quickstart/: index.html
search/: search_index.json
stylesheets/: extra.css
swarmopt/: __init__.py  _results.py  _worker.py  arch_search.py  cli.py  pso.py  search_space.py  tuner.py  visualize.py
tests/: test_core.py  test_sklearn_introspect.py
xgboost/: index.html
