[project]
name = "swarmopt"
version = "0.2.0"
description = "PSO hyperparameter tuner for PyTorch — with optional LLM-guided architecture search"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Dennis Loevlie"},
]
keywords = [
    "hyperparameter", "optimization", "pso", "particle-swarm",
    "neural-architecture-search", "pytorch", "machine-learning", "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "cloudpickle>=3.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
torch = ["torch>=2.0", "torchvision>=0.15"]
llm = ["anthropic>=0.40"]
llm-openai = ["openai>=1.0"]
llm-local = ["transformers>=4.37", "accelerate>=0.25"]
all = [
    "torch>=2.0", "torchvision>=0.15",
    "anthropic>=0.40", "openai>=1.0",
    "transformers>=4.37", "accelerate>=0.25",
]
dev = ["pytest", "optuna"]

[project.urls]
Homepage = "https://github.com/loevlie/swarmopt"
Repository = "https://github.com/loevlie/swarmopt"
Issues = "https://github.com/loevlie/swarmopt/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swarmopt", "llm_pso"]
