[project]
name = "neuropt"
version = "0.6.1"
description = "LLM-guided ML optimization — point it at a training script, it reads the curves and designs better models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Dennis Loevlie"},
]
keywords = [
    "neural-architecture-search", "llm", "automl", "hyperparameter",
    "optimization", "pytorch", "machine-learning",
    "architecture-search", "training-curves",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "cloudpickle>=3.0",
    "numpy>=1.24",
    "typer>=0.15",
]

[project.optional-dependencies]
torch = ["torch>=2.0", "torchvision>=0.15"]
llm = ["anthropic>=0.40"]
llm-openai = ["openai>=1.0"]
llm-local = ["transformers>=4.37", "accelerate>=0.25"]
viz = ["matplotlib>=3.7", "pandas>=2.0"]
all = [
    "torch>=2.0", "torchvision>=0.15",
    "anthropic>=0.40", "openai>=1.0",
    "transformers>=4.37", "accelerate>=0.25",
    "matplotlib>=3.7", "pandas>=2.0",
]
dev = ["pytest", "optuna", "ruff"]

[project.scripts]
neuropt = "neuropt.cli:app"

[project.urls]
Homepage = "https://github.com/loevlie/neuropt"
Repository = "https://github.com/loevlie/neuropt"
Issues = "https://github.com/loevlie/neuropt/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neuropt"]

[tool.ruff]
target-version = "py310"
line-length = 110
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = [
    "E731",  # lambda assignment — used intentionally in tests
    "E402",  # import not at top of file — lazy imports are deliberate
    "E701", "E702",  # multiple statements on one line — compact style in examples
    "B008",  # function call in default argument — standard typer pattern
    "B905",  # zip without strict= — not needed here
]

[tool.hatch.build.targets.sdist]
exclude = ["assets/", "docs/", "site/", "examples/", "data/", "*.jsonl", "benchmark_*.json", ".claude/", ".github/"]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.5",
]
